[gd_scene load_steps=6 format=3 uid="uid://b5l7mqjiqy8lu"]

[ext_resource type="Script" path="res://Assets/Enemies/Wyvern/wyvern.gd" id="1_8saou"]
[ext_resource type="PackedScene" uid="uid://be8h88sdnu5gj" path="res://Assets/Enemies/Wyvern/WyvernBody.glb" id="3_72bbs"]
[ext_resource type="AudioStream" uid="uid://chvqcyctj54ic" path="res://Assets/Enemies/Knight/explode.wav" id="4_2hoen"]
[ext_resource type="PackedScene" uid="uid://75rbu8qi6den" path="res://Assets/Enemies/Wyvern/WyvernWings.glb" id="4_yy2g0"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_j60oq"]

[node name="Enemy" type="CharacterBody3D" groups=["Enemy"]]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 2
script = ExtResource("1_8saou")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(2.4, -6.39032e-09, 1.09105e-07, -1.09105e-07, -0.280177, 2.38359, 6.39032e-09, -2.38359, -0.280177, -1.6473e-08, -0.057215, 0.376859)
shape = SubResource("CapsuleShape3D_j60oq")

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_2hoen")
unit_size = 2.0

[node name="WyvernBody" parent="." instance=ExtResource("3_72bbs")]
transform = Transform3D(-1.39876e-08, 0, -0.32, 0, 0.32, 0, 0.32, 0, -1.39876e-08, 0.00444605, -0.0639849, -0.401384)

[node name="WyvernWings" parent="WyvernBody" instance=ExtResource("4_yy2g0")]
transform = Transform3D(0.0278937, 0, -5.55112e-17, 0, 0.0318024, 0, -1.11022e-16, 0, 0.0169938, 1.70136, 3.23527, 0.282198)
